[#10] 학교 목록 조회 API
