# docs/swagger.json
@@ -5,6 +5,43 @@
     },
     "paths": {
         "/schools": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "학교 목록을 조회합니다 (권한: 관리자, 학생) userID를 쿼리스트링에 입력시 해당 유저의 학교 목록을 조회합니다. 디폴트 20개씩 조회",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Schools"
+                ],
+                "summary": "학교 목록 조회 [테스트 추가 API]",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "커서",
+                        "name": "cursor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "유저 아이디",
+                        "name": "userID",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "학교 목록",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ListSchoolsResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -19,12 +56,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "School"
+                    "Schools"
                 ],
-                "summary": "학교 생성",
+                "summary": "학교 생성 [필수 구현]",
                 "parameters": [
                     {
-                        "description": "회원가입 요청",
+                        "description": "학교 생성 요청",
                         "name": "CreateSchoolRequest",
                         "in": "body",
                         "required": true,
@@ -52,7 +89,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "회원가입",
+                "summary": "회원가입 [테스트 추가 API]",
                 "parameters": [
                     {
                         "description": "회원가입 요청",
@@ -83,7 +120,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "로그인",
+                "summary": "로그인 [테스트 추가 API]",
                 "parameters": [
                     {
                         "description": "로그인 요청",
@@ -150,6 +187,20 @@
                 }
             }
         },
+        "domain.ListSchoolsResponse": {
+            "type": "object",
+            "properties": {
+                "cursor": {
+                    "type": "integer"
+                },
+                "schools": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.SchoolDTO"
+                    }
+                }
+            }
+        },
         "domain.LoginUserRequest": {
             "type": "object",
             "required": [
@@ -181,6 +232,20 @@
                 "expiresIn": {
                     "type": "integer",
                     "example": 1708888192
+                }
+            }
+        },
+        "domain.SchoolDTO": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "region": {
+                    "type": "string"
                 }
             }
         },
